# gfycat-mass-uploader

./: .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  build.ps1  build.py  build.sh  docker-compose.yml  main.py  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
gfymu/: __init__.py  __main__.py  gfymu.py  version.py
