[tool.poetry]
name = "gfycat-mass-uploader"
version = "0.5.1"
description = "A small utility to quickly upload all GIFs in a directory to Gfycat and attach the same set of tags to all of them (no more manual tagging dozens of GIFs!)"
authors = ["Kenneth V. Domingo <hello@kvdomingo.xyz>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
loguru = "^0.6.0"
requests = "^2.28.1"
requests-toolbelt = "^0.9.1"
tqdm = "^4.64.1"

[tool.poetry.group.dev.dependencies]
black = {extras = ["d"], version = "^22.10.0"}
isort = "^5.10.1"
pyinstaller = "^5.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ["py37", "py38", "py39", "py310"]

[tool.isort]
profile = "black"
