[tool.poetry]
name = "gfycat-mass-uploader"
version = "0.5.1"
description = "A small utility to quickly upload all GIFs in a directory to Gfycat and attach the same set of tags to all of them (no more manual tagging dozens of GIFs!)"
authors = ["Kenneth V. Domingo <hello@kvdomingo.xyz>"]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
loguru = "^0.6.0"
requests = "^2.28.1"
requests-toolbelt = "^0.9.1"
tqdm = "^4.64.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pyinstaller = "^5.6.2"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py38", "py39", "py310", "py311"]

[tool.isort]
profile = "black"
